--- a/src/input.css
+++ b/src/input.css
@@ -15,5 +15,5 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .responsive-menu{
-    @apply flex flex-col dropdown-content gap-4 items-center justify-center absolute -right-[25px] top-12 bg-black/30 backdrop-blur-lg w-screen h-[80vh]
+    @apply flex flex-col dropdown-content gap-4 items-center justify-center absolute -right-[25px] top-[44px] bg-black/30 backdrop-blur-lg w-screen h-[80vh]
 }
