--- a/src/output.css
+++ b/src/output.css
@@ -1071,8 +1071,20 @@ html {
   }
 }
 
+.fixed {
+  position: fixed;
+}
+
 .relative {
   position: relative;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .mx-auto {
@@ -1096,6 +1108,10 @@ html {
   height: 24rem;
 }
 
+.h-\[60px\] {
+  height: 60px;
+}
+
 .w-5 {
   width: 1.25rem;
 }
@@ -1108,6 +1124,10 @@ html {
   width: 95%;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .items-center {
   align-items: center;
 }
@@ -1116,9 +1136,8 @@ html {
   gap: 1rem;
 }
 
-.bg-base-100 {
-  --tw-bg-opacity: 1;
-  background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity, 1)));
+.bg-inherit {
+  background-color: inherit;
 }
 
 .bg-purple-500 {
@@ -1155,6 +1174,12 @@ html {
 .text-primary {
   --tw-text-opacity: 1;
   color: var(--fallback-p,oklch(var(--p)/var(--tw-text-opacity, 1)));
+}
+
+.backdrop-blur-lg {
+  --tw-backdrop-blur: blur(16px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -1278,7 +1303,7 @@ h1, h2, h3, h4, h5, h6{
 .responsive-menu {
   position: absolute;
   right: -25px;
-  top: 3rem;
+  top: 44px;
   display: flex;
   height: 80vh;
   width: 100vw;
@@ -1323,5 +1348,15 @@ h1, h2, h3, h4, h5, h6{
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:bg-black\/30 {
+    background-color: rgb(0 0 0 / 0.3);
+  }
+
+  .md\:backdrop-blur-lg {
+    --tw-backdrop-blur: blur(16px);
+    -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+    backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   }
 }
