--- a/src/output.css
+++ b/src/output.css
@@ -1352,10 +1352,6 @@ html {
   background-color: inherit;
 }
 
-.bg-black\/30 {
-  background-color: rgb(0 0 0 / 0.3);
-}
-
 .fill-current {
   fill: currentColor;
 }
@@ -1676,14 +1672,14 @@ h6 {
 }
 
 #portfolio {
-  background-image: url("/asset/blob-scene-haikei.png");
+  background-image: url("../asset/blob-scene-haikei.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
 #powered-by-webcontainers{
-  background-image: url("/asset/web-container.svg");
+  background-image: url("../asset/web-container.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
@@ -1742,9 +1738,9 @@ h6 {
     background-color: rgb(0 0 0 / 0.2);
   }
 
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 
   .md\:text-\[24px\] {
@@ -1753,11 +1749,6 @@ h6 {
 
   .md\:text-\[68px\] {
     font-size: 68px;
-  }
-
-  .md\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
   }
 
   .md\:backdrop-blur-lg {
