--- a/src/input.css
+++ b/src/input.css
@@ -59,3 +59,7 @@ h6 {
   background-size: cover;
   background-position: top;
 }
+
+.btn-before{
+  @apply before:content-[""] before:absolute before:bottom-0 before:left-0 before:bg-sky-500 before:py-8 before:w-full z-[1]
+}
