--- a/src/output.css
+++ b/src/output.css
@@ -1489,6 +1489,10 @@ input.tab:checked + .tab-content,
   z-index: 10;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -1641,6 +1645,10 @@ input.tab:checked + .tab-content,
 .skew-y-12 {
   --tw-skew-y: 12deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .grid-cols-2 {
@@ -1881,6 +1889,14 @@ input.tab:checked + .tab-content,
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
 h1,
 h2,
 h3,
@@ -2090,28 +2106,62 @@ h6 {
   background-position: center;
 }
 
-#powered-by-webcontainers{
+#powered-by-webcontainers {
   background-image: url("../asset/web-container.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
 }
 
-.btn-before {
-  z-index: 1;
-}
-
-.btn-before::before {
+.btn-after::after {
   position: absolute;
   bottom: 0px;
-  left: 0px;
+  left: -1000px;
+  z-index: -10;
   width: 100%;
   --tw-bg-opacity: 1;
   background-color: rgb(14 165 233 / var(--tw-bg-opacity, 1));
   padding-top: 2rem;
   padding-bottom: 2rem;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
   --tw-content: "";
   content: var(--tw-content);
+}
+
+.btn-after:hover::after {
+  content: var(--tw-content);
+  left: 0px;
+}
+
+.btn-after:not(:hover)::after {
+  content: var(--tw-content);
+  left: -1000px;
+}
+
+/* #c-card:hover .btn-after::after{
+  left: 0;
+} */
+
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:left-\[420px\] {
+  left: 420px;
+}
+
+.group:hover .group-hover\:text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity, 1));
+}
+
+.group:hover .group-hover\:after\:left-0::after {
+  content: var(--tw-content);
+  left: 0px;
 }
 
 .dark\:fill-white:is([data-theme="dark"] *) {
